--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mystem3",
-  "version": "1.0.7",
+  "version": "2.0.8",
   "description": "NodeJS wrapper for the Yandex MyStem 3",
   "main": "lib/MyStem.js",
   "scripts": {
@@ -26,10 +26,12 @@
   "homepage": "https://github.com/koorchik/node-mystem3",
   "dependencies": {
     "bluebird": "^2.9.25",
+    "byline": "^4.2.1",
+    "hashmap": "^2.0.4",
     "mkdirp": "^0.5.0",
     "path": "^0.11.14",
     "request": "^2.55.0",
-    "tar.gz": "^0.1.1"
+    "unzip": "^0.1.11"
   },
   "devDependencies": {
     "chai": "^2.3.0",
