--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mkdirp": "^0.5.0",
     "path": "^0.11.14",
     "request": "^2.55.0",
+    "tar.gz": "^1.0.3",
     "unzip": "^0.1.11"
   },
   "devDependencies": {
